# Sipp

./: .coverage  .dockerignore  .env.example  .gitignore  .gitmodules  .npmrc  .run_emsdk_wrapper.bat  AGENTS.md  Cargo.toml  LICENSE  README.md  README_zh.md  THIRD_PARTY_NOTICES.md  book.toml  bunfig.toml  package-lock.json  package.json  setup.cmd  setup.ps1  setup.sh  turbo.json
apps/cli/: Cargo.toml  README.md
apps/cli/src/: main.rs
apps/cli/src/tests/: main_tests.rs  root_tests.rs
apps/cli/tests/: cli_black_box.rs
apps/gateway-server/: .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml  development-provider-only.yml.example  development.yml.example  production-provider-only.yml.example  production.yml  production.yml.example
apps/gateway-server/admin-ui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/gateway-server/admin-ui/src/: App.tsx  api.ts  main.tsx  model.ts  styles.css
apps/gateway-server/admin-ui/tests/: model.test.ts
apps/gateway-server/config/: development.toml  development.toml.example  hybrid.toml.example  local.toml.example  production.toml  production.toml.example  provider-only.toml.example
apps/gateway-server/deploy/: nginx.conf
apps/gateway-server/src/: admin.rs  config.rs  http.rs  lib.rs  lifecycle.rs  main.rs  metrics.rs  runtime.rs
apps/gateway-server/src/tests/: config_tests.rs  deployment_tests.rs  http_tests.rs  server_tests.rs
apps/gateway-server/tests/: provider_gateway_smoke.rs
bindings/node/: Cargo.toml  build.rs  index.d.ts  index.js  package.json  router.js
bindings/node/examples/: _common.mjs  chat.mjs  node_smoke.mjs  provider_chat.mjs  provider_embed.mjs  provider_query.mjs  remote_chat.mjs  remote_embed.mjs  remote_query.mjs  vision_chat.mjs
bindings/node/scripts/: stage-package.mjs
bindings/node/src/: lib.rs
bindings/node/src/tests/: provider_tests.rs  remote_tests.rs  root_tests.rs  stats_tests.rs
bindings/node/tests/: router.test.mjs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/examples/: _common.py  chat.py  embed.py  provider_chat.py  provider_embed.py  provider_query.py  python_smoke.py  remote_chat.py  remote_embed.py  remote_query.py  vision_chat.py
bindings/python/python/cogentlm/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/src/tests/: provider_tests.rs  remote_tests.rs  root_tests.rs
bindings/python/tests/: test_public_package.py
bindings/wasm/: CMakeLists.txt  Cargo.toml  build.rs
bindings/wasm/cmake/: EmscriptenConfig.cmake
bindings/wasm/cmake/toolchains/: EmscriptenAuto.cmake
bindings/wasm/native/cxx_bridge/: gguf_callbacks.cpp  gguf_callbacks.h
bindings/wasm/native/js/: ce_host.js
bindings/wasm/src/: abi.rs  bridge.rs  bridge_shim.cpp  bridge_shim_c_api.h  exports.rs  ffi.rs  gguf.rs  hash.rs  lib.rs  lifecycle.rs  pairing.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_black_box.rs
crates/client/: Cargo.toml
crates/client/examples/: chat.rs  embed.rs  provider_chat.rs  provider_embed.rs  provider_query.rs  query.rs  remote_chat.rs  remote_embed.rs  remote_gateway_chat.rs  remote_gateway_embed.rs  remote_gateway_query.rs  remote_query.rs  vision_chat.rs
crates/client/src/: client.rs  descriptor.rs  dispatch.rs  endpoint.rs  engine_endpoint.rs  error.rs  executor.rs  gateway.rs  gateway_endpoint.rs  io_executor.rs  lib.rs  local_endpoint.rs  map.rs  provider.rs  provider_endpoint.rs  remote.rs  remote_endpoint.rs  remote_executor.rs  request.rs  response.rs  run.rs  validate.rs
crates/client/tests/: public_api.rs
crates/cogentlm/: Cargo.toml  README.md
crates/cogentlm/src/: chat.rs  lib.rs  native_bridge.rs
crates/cogentlm/tests/: public_api.rs
crates/core/: Cargo.toml
crates/core/src/: capability.rs  chat.rs  lib.rs  stream.rs  token_delivery.rs
crates/engine/: Cargo.toml
crates/engine/src/: chat.rs  collection.rs  error.rs  lib.rs  native_bridge.rs
crates/gateway/: Cargo.toml  README.md
crates/gateway-core/: Cargo.toml  README.md
crates/gateway-core/src/: context.rs  error.rs  lib.rs  pipeline.rs
crates/gateway/examples/: anthropic_gateway.toml  custom_backend_gateway.rs  local_cogent_engine_gateway.toml  mock_gateway.toml  openai_compatible_gateway.toml  openai_gateway.toml  remote_smoke_gateway.toml
crates/gateway/src/: adapter.rs  backend.rs  config.rs  context.rs  error.rs  executor.rs  lib.rs  main.rs  protocol.rs  server.rs
crates/gateway/tests/: provider_gateway_smoke.rs
crates/remote/: Cargo.toml
crates/remote/src/: config.rs  error.rs  lib.rs  request.rs  response.rs  stream.rs  transport.rs
crates/sipp/: Cargo.toml  README.md
crates/sipp/src/: defaults.rs  lib.rs  native_bridge.rs
crates/sipp/tests/: public_api.rs
crates/sys/: CMakeLists.txt  Cargo.toml  build.rs
crates/sys/build_support/: bindings.rs  cmake.rs  context.rs  cxx.rs  ide.rs  link.rs  mod.rs  pipeline.rs  util.rs
crates/sys/cmake/: llama_mtmd_sources.cmake  mtmd_sources.cmake
crates/sys/include/: cogent_cxx.h  cogent_shim.h
crates/sys/src/: bindings_fallback.rs  bridge.rs  cogent_shim.cpp  lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: clean.rs  cli.rs  doctor.rs  lib.rs  main.rs  output.rs  run.rs  sample_model.rs  setup.rs  splash.rs  test.rs  toolchain.rs  utils.rs
examples/gateway/: Cargo.toml  README.md  local-gateway.toml  openai-gateway.toml
examples/gateway/assets/: index.html
examples/gateway/src/: main.rs
examples/rust/: Cargo.toml  README.md
examples/rust/src/: chat.rs  embed.rs  gateway_chat.rs  gateway_embed.rs  gateway_query.rs  lib.rs  local_common.rs  openai_provider_chat.rs  provider_chat.rs  query.rs  remote_common.rs  support.rs  vision_chat.rs
lib/binding-dto/: Cargo.toml
lib/binding-dto/src/: lib.rs
lib/gateway/: Cargo.toml  README.md
lib/gateway/src/: lib.rs  profile.rs  toolkit.rs
lib/python/: .gitignore  README.md  pyproject.toml
lib/python/tests/: test_public_package.py
lib/rust/: Cargo.toml  README.md
lib/rust/src/: lib.rs
lib/rust/tests/: public_api.rs
(+1334 files in other folders)
