[package]
name = "cogentlm-cli"
description = "Command-line interface for CogentLM local inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[features]
default = ["native"]
native = ["cogentlm-engine/native"]
backend-dl = ["cogentlm-engine/backend-dl"]
cuda = ["cogentlm-engine/cuda"]
metal = ["cogentlm-engine/metal"]
vulkan = ["cogentlm-engine/vulkan"]
openmp = ["cogentlm-engine/openmp"]

[[bin]]
name = "cogentlm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
cogentlm-engine.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
