[package]
name = "sipp-cli"
description = "Command-line interface for Sipp local inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[features]
backend-dl = ["sipp/backend-dl"]
cuda = ["sipp/cuda"]
metal = ["sipp/metal"]
vulkan = ["sipp/vulkan"]
openmp = ["sipp/openmp"]

[[bin]]
name = "sipp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
sipp.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
