[package]
name = "cogentlm-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "cogentlm_node"
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["cogentlm-engine/native", "cogentlm-client/native"]
cuda = ["cogentlm-engine/cuda", "cogentlm-client/cuda"]
metal = ["cogentlm-engine/metal", "cogentlm-client/metal"]
vulkan = ["cogentlm-engine/vulkan", "cogentlm-client/vulkan"]
openmp = ["cogentlm-engine/openmp", "cogentlm-client/openmp"]

[dependencies]
cogentlm-client = { workspace = true, default-features = false, features = ["remote"] }
cogentlm-core.workspace = true
cogentlm-engine.workspace = true
futures.workspace = true
napi = { workspace = true, features = ["serde-json"] }
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[build-dependencies]
napi-build.workspace = true
