[package]
name = "cogentlm-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "cogentlm_node"
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["cogentlm/native"]
cuda = ["cogentlm/cuda"]
metal = ["cogentlm/metal"]
vulkan = ["cogentlm/vulkan"]
openmp = ["cogentlm/openmp"]

[dependencies]
cogentlm = { workspace = true, features = ["providers"] }
futures.workspace = true
napi = { workspace = true, features = ["serde-json"] }
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[build-dependencies]
napi-build.workspace = true
