[package]
name = "sipp-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "sipp_node"
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["sipp/native"]
cuda = ["sipp/cuda"]
metal = ["sipp/metal"]
vulkan = ["sipp/vulkan"]
openmp = ["sipp/openmp"]

[dependencies]
sipp = { workspace = true, features = ["providers"] }
futures.workspace = true
napi = { workspace = true, features = ["serde-json"] }
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[build-dependencies]
napi-build.workspace = true
