[package]
name = "cogentlm-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["cogentlm/native"]
cuda = ["cogentlm/cuda"]
metal = ["cogentlm/metal"]
vulkan = ["cogentlm/vulkan"]
openmp = ["cogentlm/openmp"]

[dependencies]
cogentlm = { workspace = true, features = ["providers"] }
futures.workspace = true
pyo3 = { workspace = true, features = ["abi3-py39", "extension-module"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
