[package]
name = "sipp-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["sipp/native"]
cuda = ["sipp/cuda"]
metal = ["sipp/metal"]
vulkan = ["sipp/vulkan"]
openmp = ["sipp/openmp"]

[dependencies]
sipp = { workspace = true, features = ["providers"] }
sipp-binding-dto.workspace = true
futures.workspace = true
pyo3 = { workspace = true, features = ["abi3-py39", "extension-module"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
