[package]
name = "cogentlm-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
cogentlm-shard.workspace = true
cxx.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[build-dependencies]
cxx-build.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
cogentlm-engine = { path = "../../crates/engine", default-features = false }
