[package]
name = "cogentlm-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
cogentlm.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
