[package]
name = "cogentlm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["native"]
native = ["cogentlm-engine/native"]
backend-dl = ["cogentlm-engine/backend-dl"]
cuda = ["cogentlm-engine/cuda"]
metal = ["cogentlm-engine/metal"]
vulkan = ["cogentlm-engine/vulkan"]
openmp = ["cogentlm-engine/openmp"]

[[bin]]
name = "cogentlm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
cogentlm-engine.workspace = true
serde_json.workspace = true
