[package]
name = "cogentlm-client"
description = "Extensible CogentLM inference client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[features]
default = ["native", "providers"]
native = ["cogentlm-engine/native"]
backend-dl = ["cogentlm-engine/backend-dl"]
cuda = ["cogentlm-engine/cuda"]
metal = ["cogentlm-engine/metal"]
vulkan = ["cogentlm-engine/vulkan"]
openmp = ["cogentlm-engine/openmp"]
providers = ["dep:cogentlm-providers"]

[dependencies]
cogentlm-core.workspace = true
cogentlm-engine = { workspace = true, default-features = false }
cogentlm-providers = { workspace = true, optional = true }
futures.workspace = true
futures-channel.workspace = true
futures-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { workspace = true, features = [
    "rt",
    "net",
    "time",
    "sync",
] }

[dev-dependencies]
async-trait = "0.1"
futures.workspace = true
wiremock = "0.6"
