[package]
name = "cogentlm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified Rust facade for CogentLM local and gateway inference"
readme = "../../README.md"
keywords = ["ai", "llm", "inference", "gguf"]
categories = ["api-bindings", "science"]

[features]
default = ["native", "remote"]
native = ["cogentlm-client/native", "cogentlm-engine/native"]
remote = ["cogentlm-client/remote"]
backend-dl = ["native", "cogentlm-client/backend-dl", "cogentlm-engine/backend-dl"]
cuda = ["native", "cogentlm-client/cuda", "cogentlm-engine/cuda"]
metal = ["native", "cogentlm-client/metal", "cogentlm-engine/metal"]
vulkan = ["native", "cogentlm-client/vulkan", "cogentlm-engine/vulkan"]
openmp = ["native", "cogentlm-client/openmp", "cogentlm-engine/openmp"]

[dependencies]
cogentlm-client.workspace = true
cogentlm-core.workspace = true
cogentlm-engine.workspace = true
cogentlm-shard.workspace = true

[dev-dependencies]
futures.workspace = true
