[package]
name = "cogentlm-core"
description = "Provider-neutral value types shared by CogentLM crates"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
version.workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
