[package]
name = "cogentlm-gateway"
description = "Framework-neutral building blocks for CogentLM gateway adapters"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
version.workspace = true

[features]
default = ["native", "remote", "providers"]
native = ["cogentlm-client/native"]
backend-dl = ["cogentlm-client/backend-dl"]
cuda = ["cogentlm-client/cuda"]
metal = ["cogentlm-client/metal"]
vulkan = ["cogentlm-client/vulkan"]
openmp = ["cogentlm-client/openmp"]
remote = ["cogentlm-client/remote"]
providers = ["cogentlm-client/providers"]

[dependencies]
cogentlm-client.workspace = true
cogentlm-core.workspace = true
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
