[package]
name = "cogentlm-sys"
description = "Native llama.cpp FFI layer for CogentLM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
links = "cogentlm"

[features]
default = ["native"]
native = []
backend-dl = ["native"]
cuda = ["native"]
metal = ["native"]
vulkan = ["native"]
openmp = ["native"]

[build-dependencies]
cc = "1.0"
cmake.workspace = true
cxx-build.workspace = true

[dependencies]
cxx.workspace = true

[dev-dependencies]
cmake.workspace = true
cxx-build.workspace = true
