[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
crossterm = "0.29"
humantime = "2.1"
indicatif = "0.18"
inquire = "0.9.4"
owo-colors = "4.3.0"
portable-pty = "0.9.0"
serde_json.workspace = true
sha2.workspace = true
tui-banner = "0.2.3"
xshell = "0.2"
